--- a/HTML/Intermedio/4.Fielsed-Legend/fieldset.css
+++ b/HTML/Intermedio/4.Fielsed-Legend/fieldset.css
@@ -3,10 +3,11 @@ body{
     font-family: sans-serif;
     background: #222;
     color: #eee;
+    box-sizing: border-box;
 }
 
 /* darle el mismo estilo a otro elemento o tags */
-input, textarea{
+input, textarea, select{
     width: 100%;
     box-sizing: border-box;
     padding: 6px 12px;
@@ -17,18 +18,10 @@ input, textarea{
     background-color: transparent;
     border-radius: 4px;
     color: #eee;
+    margin: 6px 0;
     
 }
 
-textarea{
-    min-width: 100%;
-    /* aca solamente me permite mover el textarea hacia abajo. */
-    resize: vertical;
-    min-height: 100px;
-    max-height: 200px;
-    font-family: sans-serif;
-
-}
 
 form{
     background: transparent;
@@ -37,24 +30,15 @@ form{
     margin: auto;
     margin-top: 40px;
     box-shadow: 0 0 30px 0 #0006;
-    padding: 20px;
+    padding: 10px 20px;
    
-    
 }
 
-h2{
-
-    text-align: center;
-    margin:0;
-    margin-bottom: 20px;
+fieldset{
+    margin: 20px 0;
+    border-radius: 10px;
+    border: 2px solid #ddd6;
 }
-
-.form_input{
-    padding: 6px 20px;
-}
-
- /* a los lbl como ser texto de linea no se le puede poner margin ni padding */
-label{
-    font-size: 0.9em;
-    line-height: 2;
+legend{
+    padding: 0 7px;
 }
