--- a/HTML/Intermedio/4.Fielsed-Legend/styles copy.css
+++ b/HTML/Intermedio/4.Fielsed-Legend/styles copy.css
@@ -6,7 +6,7 @@ body{
 }
 
 /* darle el mismo estilo a otro elemento o tags */
-input, textarea{
+input, textarea, select{
     width: 100%;
     box-sizing: border-box;
     padding: 6px 12px;
@@ -18,6 +18,11 @@ input, textarea{
     border-radius: 4px;
     color: #eee;
     
+}
+
+option{
+    background: #222;
+
 }
 
 textarea{
