--- a/Proyectos/Portfolio2Modi/styles.css
+++ b/Proyectos/Portfolio2Modi/styles.css
@@ -7,7 +7,7 @@
     scroll-behavior: smooth;
     font-family: "Syne", sans-serif; 
 }
-/* -------------------------------------------------------------------------------- */
+
 :root{
     --bg-color: #121212;
     --second-bg-color: #202020;
@@ -18,8 +18,8 @@
     --ann-color: #c7c6d3;
 
     --h1-font: 6rem;
-    --h2-font: 2.4rem;
-    --p-font: 0.9rem;
+    --h2-font: 3.8rem;
+    --p-font: 1.1rem;
 }
 body{
     background: var(--bg-color);
@@ -28,9 +28,9 @@ body{
 
 header{
     position: fixed;
-    top: 0;
-    right: 0;
-    padding: 10px 14% ;
+    top: 0px;
+    right: 0px;
+    padding: 20px 14% ;
     width: 100%;
     z-index: 1000;
     display: flex;
@@ -41,53 +41,52 @@ header{
 }
 
 .logo img{
-    max-width: 65px;
+    max-width: 80px;
     width: 100%;
     height: 100%;
     object-fit: contain;
 }
 
-.menu_principal a{
+.menulist a{
     display: inline-block;
-    font-size: 15px;
+    font-size: 20px;
     font-weight: 300;
     color: var(--other-color);
-    margin: 0 20px;
+    margin: 0px 30px;
     transition: all .6s ease;
 }
 
-.menu_principal a:hover{
+.menulist a:hover{
     color: var(--text-color);
 }
 
-.menu_principal a.Active{
+.menulist a.Active{
     color: var(--text-color);
 }
 
-.menu_right{
+.menu-right{
     display: flex;
     align-items: center;
 }
 
-
-.menu_btn{
+.menu-btn{
     display: inline-block;
-    padding: 13px 25px;
+    padding: 15px 25px;
     background: linear-gradient(135deg, #e1bac5 0%, var(--main-color)100%);
     color: var(--bg-color);
-    font-size: 14px;
+    font-size: 20px;
     font-weight: 500;
     border-radius: 13px;
 }
 
-.menu_btn:hover{
+.menu-btn:hover{
     background: linear-gradient(135deg,var(--main-color) 0%,#e1bac5 100%);
 
 }
 
 #menu-ico{
     z-index: 10001;
-    font-size: 30px;
+    font-size: 40px;
     margin-left: 25px;
     cursor: pointer;
     display: none;
@@ -101,7 +100,7 @@ section{
     height: 100vh;
     width: 100%;
     background: url(../Portfolio2/img/bg.png);
-    background-size: cover;
+    background-size:cover;
     background-position: center;
     display: flex;
     align-items: center;
@@ -109,7 +108,7 @@ section{
 }
 
 .home-text{
-    padding-top: 60px;
+    padding-top: 30px;
 }
 
 .h-line{
@@ -129,7 +128,7 @@ section{
 }
 
 .home-text h1{
-    margin: 13px 0;
+    margin: 20px 0px;
     font-size: var(--h1-font);
 
 }
@@ -142,26 +141,27 @@ section{
 }
 
 .home-text h4 {
-    font-size: 16px;
+    font-size: 22px;
     font-weight: 500;
-    margin-bottom: 25px;
+    margin-bottom: 35px;
 }
 
 .social-icons a{
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    height: 40px;
-    width: 40px;
+    height: 50px;
+    width: 50px;
     background: transparent;
     border: 1px solid var(--alt-color);
     border-radius: 1.7rem;
     color: var(--ann-color);
     font-size: 18px;
     margin-right: 12px;
-    margin-bottom: 25px;
+    margin-bottom: 40px;
     transition: all .6s ease;
 }
+
 
 /* rotamos los iconos con este evento, 360 grados */
 .social-icons a:hover{
@@ -176,11 +176,11 @@ section{
 
 .btn1{
     display: inline-block;
-    padding: 16px 30px;
+    padding: 18px 35px;
     background: transparent;
     border: 1px solid var(--alt-color);
     color: var(--text-color);
-    font-size: 16px;
+    font-size: 18px;
     font-weight: 500;
     border-radius: 17px;
     margin-right: 20px;
@@ -193,10 +193,10 @@ section{
 
 .btn2{
     display: inline-block;
-    padding: 16px 30px;
+    padding: 18px 35px;
     background: linear-gradient(135deg, #e1bac5 0%, var(--main-color)100%);
     color: var(--bg-color);
-    font-size: 16px;
+    font-size: 18px;
     font-weight: 500;
     border-radius: 17px;
     transition: all .7s ease;
@@ -209,7 +209,7 @@ section{
 header.sticky{
     padding: 5px 14%;
     background: transparent;
-    backdrop-filter: blur(100px);
+    backdrop-filter: blur(25px);
 }
 
 .about {
@@ -222,15 +222,16 @@ header.sticky{
 
 .about-img img{
     width: 100%;
-    height: 500px;
-    max-width: 400px;
+    height: 700px;
+    max-width: 550px;
     border-radius: 20%;
     object-fit: cover;
     background: -webkit-linear-gradient(135deg, var(--main-color) 0%, #e1bac5 100%);
+    border: 5px solid var(--main-color);
 }
 
 .about-text h2{
-    margin: 15px 0;
+    margin: 22px 0px;
     font-size: var(--h2-font);
 }
 
@@ -242,16 +243,16 @@ header.sticky{
 }
 
 .about-text h5{
-    font-size: 16px;
+    font-size: 22px;
     font-weight: 500;
-    line-height: 1.6;
-    margin-bottom: 20px;
+    line-height: 1.7;
+    margin-bottom: 30px;
 }
 
 .about-text p{
     font-size: var(--p-font);
     font-weight: 500;
-    line-height: 24px;
+    line-height: 33px;
     color: var(--ann-color);
     margin-bottom:  35px;
 }
@@ -279,7 +280,7 @@ header.sticky{
     grid-template-columns: repeat(auto-fit, minmax(200px, auto));
     align-items: center;
     gap: 2rem;
-    margin-top: 2.5rem;
+    margin-top: 5rem;
 }
 
 .row-img{
@@ -303,7 +304,7 @@ header.sticky{
 .row{
     background: var(--bg-color);
     border-radius: 1.7rem;
-    padding: 0 0 10px 0;
+    padding: 0px 0px 10px 0px;
     transition: all .7s ease;
 }
 
@@ -313,16 +314,16 @@ header.sticky{
     align-items: center;
     justify-content: space-between;
     gap: 20px;
-    margin: 15px;
+    margin: 25px;
 }
 
 .row-left h3{
-    font-size: 16px;
+    font-size: 25px;
     margin-bottom: 8px;
 }
 
 .row-left h6{
-    font-size: 12px;
+    font-size: 14px;
     color: var(--ann-color);
 }
 
@@ -330,17 +331,17 @@ header.sticky{
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    height: 35px;
-    width: 35px;
+    height: 50px;
+    width: 50px;
     background: linear-gradient(135deg, #e1bac5 0%, var(--main-color)100%);
     color: var(--bg-color);
     border-radius: 1.7rem;
-    font-size: 16px;
+    font-size: 22px;
     transition: all .7s ease;
 }
 
 .row-right a:hover{
-    transform: scale(1.1) translate3d(8px,0 ,0);
+    transform: scale(1.1) translate3d(11px,0 ,0);
 }
 
 .contact{
@@ -353,7 +354,7 @@ header.sticky{
 }
 
 .contact-main h2{
-    margin: 32px 0;
+    margin: 32px 0px;
     font-size: var(--h2-font);
 }
 
@@ -391,7 +392,7 @@ header.sticky{
     color: var(--ann-color)
 }
 
-.num h6{
+.num h6{    
     font-size: 22px;
     font-weight: 600;
 }
@@ -434,7 +435,7 @@ form .submit-btn{
 }
 
 form .submit-btn:hover{
-    transform: scale(1.1) translate3d(6px, 0, 0);
+    transform: scale(1.1) translate3d(8px, 0px, 0px);
 }
 
 .footer{
@@ -444,7 +445,7 @@ form .submit-btn:hover{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 2 rem;
+    gap: 2rem;
 }
 
 .copyright p{
@@ -462,7 +463,7 @@ form .submit-btn:hover{
     background: -webkit-linear-gradient(135deg, #e1bac5 0%, var(--main-color)100%);
     color: var(--bg-color);
     border-radius: 1.7rem;
-    font-size: 16px;
+    font-size: 22px;
 }
 
 @media(max-width: 1580px){
@@ -495,9 +496,9 @@ form .submit-btn:hover{
     }   
 }
 :root{
-    --h1-font: 2.8rem;
-    --h2-font: 2rem;
-    --p-font: 0.8rem;
+    --h1-font: 4.5rem;
+    --h2-font: 3rem;
+    --p-font: 1rem;
 }
 
 @media(max-width: 1200px){
@@ -511,8 +512,8 @@ form .submit-btn:hover{
     .about-img img{
         text-align: center;
         width: 100%;
-        height: 400px;
-        max-width: 330px;
+        height: 580px;
+        max-width: 450px;
         border-radius: 20%;
         object-fit: cover;
         margin: 0 auto ;
@@ -532,11 +533,11 @@ form .submit-btn:hover{
     .logo img{
         max-width: 50px;
     }
-    .menu_principal a{
+    .menulist a{
         margin: 0 20px;
         font-size: 17px;
     }
-    .menu_btn{
+    .menu-btn{
         padding: 14px 22px;
         font-size: 15px;
     }
@@ -551,51 +552,51 @@ form .submit-btn:hover{
 }
 @media(max-width: 900px){
     :root{
-        --h1-font: 2.3rem;
-        --h2-font: 1.9rem;
+        --h1-font: 4rem;
+        --h2-font: 2.8rem;
     }
 }
 
 @media(max-width: 800px){
-    #menu-icon{
+    #menu-ico{
         display: block;
     }
-    .menu_principal{
+    .menulist{
         position: absolute;
         width: 100%;
         height: 100vh;
         padding: 70px 50px;
         top: 0;
         right: 0;
-        left: 0;
+        left: 100%;
         display: flex;
         flex-direction: column;
         background: #000;
         transition: all .6s ease-in-out;
     }
-    .menu_principal a{
+    .menulist a{
         display: block;
         padding: 0;
-        margin: 0 0 25px 0;
+        margin: 0px 0px 25px 0px;
         font-size: 1.7rem;
     }
 
-    .menu_principal.open{
-        left: 100%;
+    .menulist.open{
+        left: 0;
 
     }
-}
+} 
 
 @media(max-width: 590px){
     :root{
-        --h1-font: 1.8rem;
-        --h2-font: 1.5rem;
+        --h1-font: 3.4rem;
+        --h2-font: 2.5rem;
     }
     .about-img img{
         text-align: center;
         width: 100%;
-        height: 350px;
-        max-width: 290px;
+        height: 500px;
+        max-width: 380px;
         border-radius: 20%;
         object-fit: cover;
         margin: 0 auto ;
