--- a/Proyectos/Portfolio4Modi/styles.css
+++ b/Proyectos/Portfolio4Modi/styles.css
@@ -7,7 +7,7 @@
     scroll-behavior: smooth;
     font-family: "Syne", sans-serif; 
 }
-/* -------------------------------------------------------------------------------- */
+
 :root{
     --bg-color: #121212;
     --second-bg-color: #202020;
@@ -17,9 +17,10 @@
     --alt-color: #4b4b51;
     --ann-color: #c7c6d3;
 
-    --h1-font: 6rem;
+    --h1-font: 4.0rem;
     --h2-font: 2.4rem;
-    --p-font: 0.9rem;
+    --p-font: 1.1rem;
+    --p-about-font: 0.8rem;
 }
 body{
     background: var(--bg-color);
@@ -28,9 +29,9 @@ body{
 
 header{
     position: fixed;
-    top: 0;
-    right: 0;
-    padding: 10px 14% ;
+    top: 0px;
+    right: 0px;
+    padding: 15px 12% ;
     width: 100%;
     z-index: 1000;
     display: flex;
@@ -41,75 +42,75 @@ header{
 }
 
 .logo img{
-    max-width: 65px;
+    max-width: 60px;
     width: 100%;
     height: 100%;
     object-fit: contain;
 }
 
-.menu_principal a{
+.menulist a{
     display: inline-block;
-    font-size: 15px;
+    font-size: 16px;
     font-weight: 300;
     color: var(--other-color);
-    margin: 0 20px;
+    margin: 0px 20px;
     transition: all .6s ease;
 }
 
-.menu_principal a:hover{
+.menulist a:hover{
     color: var(--text-color);
 }
 
-.menu_principal a.Active{
+.menulist a.Active{
     color: var(--text-color);
 }
 
-.menu_right{
+.menu-right{
     display: flex;
     align-items: center;
 }
 
-
-.menu_btn{
+.menu-btn{
     display: inline-block;
-    padding: 13px 25px;
+    padding: 10px 16px;
     background: linear-gradient(135deg, #e1bac5 0%, var(--main-color)100%);
     color: var(--bg-color);
-    font-size: 14px;
+    font-size: 15px;
     font-weight: 500;
     border-radius: 13px;
 }
 
-.menu_btn:hover{
+.menu-btn:hover{
     background: linear-gradient(135deg,var(--main-color) 0%,#e1bac5 100%);
 
 }
 
 #menu-ico{
     z-index: 10001;
-    font-size: 30px;
+    font-size: 35px;
     margin-left: 25px;
     cursor: pointer;
     display: none;
 }
 
 section{
-    padding: 110px 14% 90px;
+    padding: 110px 12% 150px;
 }
 
 .home{
     height: 100vh;
     width: 100%;
     background: url(../Portfolio2/img/bg.png);
-    background-size: cover;
-    background-position: center;
+    background-size:cover;
+    background-position: center; 
+    background-attachment: fixed;
     display: flex;
     align-items: center;
     justify-content: flex-start;
 }
 
 .home-text{
-    padding-top: 60px;
+    padding-top: 110px;
 }
 
 .h-line{
@@ -129,7 +130,7 @@ section{
 }
 
 .home-text h1{
-    margin: 13px 0;
+    margin: 10px 0px;
     font-size: var(--h1-font);
 
 }
@@ -151,17 +152,18 @@ section{
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    height: 40px;
-    width: 40px;
+    height: 35px;
+    width: 35px;
     background: transparent;
     border: 1px solid var(--alt-color);
     border-radius: 1.7rem;
     color: var(--ann-color);
     font-size: 18px;
-    margin-right: 12px;
+    margin-right: 8px;
     margin-bottom: 25px;
     transition: all .6s ease;
 }
+
 
 /* rotamos los iconos con este evento, 360 grados */
 .social-icons a:hover{
@@ -176,13 +178,13 @@ section{
 
 .btn1{
     display: inline-block;
-    padding: 16px 30px;
+    padding: 12px 20px;
     background: transparent;
     border: 1px solid var(--alt-color);
     color: var(--text-color);
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 500;
-    border-radius: 17px;
+    border-radius: 16px;
     margin-right: 20px;
     transition: all .7s ease;
 }
@@ -193,12 +195,12 @@ section{
 
 .btn2{
     display: inline-block;
-    padding: 16px 30px;
+    padding: 12px 18px;
     background: linear-gradient(135deg, #e1bac5 0%, var(--main-color)100%);
     color: var(--bg-color);
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 500;
-    border-radius: 17px;
+    border-radius: 16px;
     transition: all .7s ease;
 }
 
@@ -209,7 +211,7 @@ section{
 header.sticky{
     padding: 5px 14%;
     background: transparent;
-    backdrop-filter: blur(100px);
+    backdrop-filter: blur(25px);
 }
 
 .about {
@@ -217,20 +219,21 @@ header.sticky{
     display: grid;
     grid-template-columns: repeat( 2, 1fr);
     align-items: center;
-    gap: 1rem;
+    gap: 0.3rem;
 }
 
 .about-img img{
     width: 100%;
-    height: 500px;
-    max-width: 400px;
+    height: 460px;
+    max-width: 360px;
     border-radius: 20%;
     object-fit: cover;
     background: -webkit-linear-gradient(135deg, var(--main-color) 0%, #e1bac5 100%);
+    border: 5px solid var(--main-color);
 }
 
 .about-text h2{
-    margin: 15px 0;
+    margin: 15px 0px;
     font-size: var(--h2-font);
 }
 
@@ -242,18 +245,23 @@ header.sticky{
 }
 
 .about-text h5{
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 500;
-    line-height: 1.6;
-    margin-bottom: 20px;
+    line-height: 1.5;
+    margin-bottom: 15px;
 }
 
 .about-text p{
-    font-size: var(--p-font);
+    font-size: var( --p-about-font);
     font-weight: 500;
-    line-height: 24px;
+    line-height: 23px;
     color: var(--ann-color);
-    margin-bottom:  35px;
+    margin-bottom:  30px;
+}
+
+.h-btn-about{
+    display: flex;
+    align-items: center;
 }
 
 .portfolio{
@@ -261,7 +269,7 @@ header.sticky{
 }
 
 .mid-text h2{
-    margin-top: 22px;
+    margin-top: 15px;
     font-size: var(--h2-font);
 }
 
@@ -279,7 +287,7 @@ header.sticky{
     grid-template-columns: repeat(auto-fit, minmax(200px, auto));
     align-items: center;
     gap: 2rem;
-    margin-top: 2.5rem;
+    margin-top: 2.2rem;
 }
 
 .row-img{
@@ -301,9 +309,9 @@ header.sticky{
 }
 
 .row{
-    background: var(--bg-color);
+    background:var(--second-bg-color);
     border-radius: 1.7rem;
-    padding: 0 0 10px 0;
+    padding: 0px 0px 5px 0px;
     transition: all .7s ease;
 }
 
@@ -312,17 +320,17 @@ header.sticky{
     flex-wrap: nowrap;
     align-items: center;
     justify-content: space-between;
-    gap: 20px;
+    gap: 10px;
     margin: 15px;
 }
 
 .row-left h3{
-    font-size: 16px;
-    margin-bottom: 8px;
+    font-size: 18px;
+    margin-bottom: 5px;
 }
 
 .row-left h6{
-    font-size: 12px;
+    font-size: 10px;
     color: var(--ann-color);
 }
 
@@ -330,30 +338,30 @@ header.sticky{
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    height: 35px;
-    width: 35px;
+    height: 40px;
+    width: 40px;
     background: linear-gradient(135deg, #e1bac5 0%, var(--main-color)100%);
     color: var(--bg-color);
     border-radius: 1.7rem;
-    font-size: 16px;
+    font-size: 18px;
     transition: all .7s ease;
 }
 
 .row-right a:hover{
-    transform: scale(1.1) translate3d(8px,0 ,0);
+    transform: scale(1.1) translate3d(11px,0 ,0);
 }
 
 .contact{
-
+    padding: 160px 12% 140px;
     background: var(--second-bg-color);
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
-    gap: 2rem;
+    gap: 1rem;
 }
 
 .contact-main h2{
-    margin: 32px 0;
+    margin: 15px 0px;
     font-size: var(--h2-font);
 }
 
@@ -364,35 +372,35 @@ header.sticky{
 }
 
 .email{
-    margin-bottom: 22px;
+    margin-bottom: 18px;
 }
 
 .email p{
-    font-size: 15px;
+    font-size: 16px;
     font-weight: 500;
     margin-bottom: 5px;
     color: var(--ann-color)
 }
 
 .email h6{
-    font-size: 22px;
+    font-size: 20px;
     font-weight: 600;
 }
- 
+
 .num{
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 
 }
 
 .num p{
-    font-size: 15px;
+    font-size: 16px;
     font-weight: 500;
     margin-bottom: 5px;
     color: var(--ann-color)
 }
 
-.num h6{
-    font-size: 22px;
+.num h6{    
+    font-size: 20px;
     font-weight: 600;
 }
 
@@ -400,13 +408,14 @@ header.sticky{
     width: 100%;
     max-width: 600px;
     display: grid;
-    gap: 1.2rem;
+    gap: 0.5rem;
 }
 
 .contact-form input,.contact-form textarea{
     border:none;
     outline: none;
-    padding:17px;
+    box-sizing: border-box;
+    padding:12px;
     font-size: 0.9rem;
     background: var(--bg-color);
     color: var(--text-color);
@@ -419,36 +428,44 @@ form textarea ::placeholder{
     font-size: 15px;
 }
 
+textarea{
+    resize: vertical;
+    min-height: 200px;
+    max-height: 200px;
+    
+}
+
 form .submit-btn{
     display: inline-block;
-    padding: 14px 28px;
+    padding: 13px 23px;
     background: -webkit-linear-gradient(135deg, #e1bac5 0%, var(--main-color)100%);
     color: var(--second-bg-color);
-    font-size: 15px;
+    font-size: 16px;
     font-weight: 500px;
     border-radius: 17px;
-    width: 30%;
+    width: 35%;
     cursor: pointer;
     transition: all .7s ease;
+    margin-top: 5px;
 
 }
 
 form .submit-btn:hover{
-    transform: scale(1.1) translate3d(6px, 0, 0);
+    transform: scale(1.1) translate3d(8px, 0px, 0px);
 }
 
 .footer{
-    padding: 20px 14%;
+    padding: 15px 14%;
     background: transparent;
     color: var(--text-color);
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 2 rem;
+    gap: 2rem;
 }
 
 .copyright p{
-    font-size: 15px;
+    font-size: 14px;
     font-weight: 400;
     color: var(--ann-color);
 }
@@ -457,30 +474,30 @@ form .submit-btn:hover{
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    height: 50px;
-    width: 50px;
+    height: 43px;
+    width: 43px;
     background: -webkit-linear-gradient(135deg, #e1bac5 0%, var(--main-color)100%);
     color: var(--bg-color);
     border-radius: 1.7rem;
-    font-size: 16px;
+    font-size: 18px;
 }
 
-@media(max-width: 1580px){
+/* @media(max-width: 1580px){
     header{
         padding: 15px 6%;
     }
     header.sticky{
         padding: 3px 6%;
-    }
-    section{
+    } */
+    /* section{
         padding: 100px 6% 80px;
-    }
-    .footer{
+    } */
+    /* .footer{
         padding: 15px 6%;
     }   
-}
+} */
 
-@media(max-width: 1300px){
+/* @media(max-width: 1300px){
     header{
         padding: 15px 3%;
     }
@@ -488,22 +505,30 @@ form .submit-btn:hover{
         padding: 3px 3%;
     }
     section{
-        padding: 100px 3% 80px;
+        padding: 100px 10% 150px;
     }
     .footer{
         padding: 15px 3%;
     }   
-}
-:root{
-    --h1-font: 2.8rem;
-    --h2-font: 2rem;
-    --p-font: 0.8rem;
-}
+} */
+/* :root{
+    --h1-font: 4.5rem;
+    --h2-font: 3rem;
+    --p-font: 1rem;
+} */
 
 @media(max-width: 1200px){
-    .about{
+    /* .about{
         grid-template-columns: 1fr;
         gap: 2rem;
+    }
+     */
+    section{
+        padding: 100px 5% 170px;
+    }
+
+    .h-btn{
+     
     }
     .about-img{
         text-align: center;
@@ -511,32 +536,58 @@ form .submit-btn:hover{
     .about-img img{
         text-align: center;
         width: 100%;
-        height: 400px;
-        max-width: 330px;
+        height: 450px;
+        max-width: 350px;
         border-radius: 20%;
         object-fit: cover;
         margin: 0 auto ;
 
     }  
-    .contact{
+
+    /* .about-text{
+        text-align: center;
+    } */
+
+    /* .contact{
         grid-template-columns: 1fr;
         gap: 2rem;
-    } 
+    }  */
     .contact-form{
         width: 100%;
         max-width: 100%;
-    }  
+    }
+
+    form .submit-btn{
+        padding: 13px 27px;
+        width: 40%;
+        font-size:  13px;
+    }
+    
+    /* form .submit-btn{
+        display: inline-block;
+        padding: 13px 23px;
+        background: -webkit-linear-gradient(135deg, #e1bac5 0%, var(--main-color)100%);
+        color: var(--second-bg-color);
+        font-size: 16px;
+        font-weight: 500px;
+        border-radius: 17px;
+        width: 30%;
+        cursor: pointer;
+        transition: all .7s ease;
+        margin-top: 5px;
+    
+    } */
 }
 
-@media(max-width: 1000px){
+@media(max-width: 1060px){
     .logo img{
         max-width: 50px;
     }
-    .menu_principal a{
+    .menulist a{
         margin: 0 20px;
         font-size: 17px;
     }
-    .menu_btn{
+    .menu-btn{
         padding: 14px 22px;
         font-size: 15px;
     }
@@ -548,54 +599,202 @@ form .submit-btn:hover{
         padding: 14px 22px;
         font-size: 15px;
     }
-}
-@media(max-width: 900px){
-    :root{
-        --h1-font: 2.3rem;
-        --h2-font: 1.9rem;
+
+    form .submit-btn{
+        padding: 11px 21px;
+        font-size: 14px;     
+    }
+
+    .about-img img{
+        text-align: center;
+        width: 100%;
+        height: 420px;
+        max-width: 310px;
+        border-radius: 20%;
+        object-fit: cover;
+        margin: 0 auto ;
+
+    } 
+
+    form .submit-btn{
+        padding: 13px 27px;
+        width: 40%;
+        font-size:  13px;
     }
 }
 
-@media(max-width: 800px){
-    #menu-icon{
+
+@media(max-width: 900px){
+    :root{
+        --h1-font:3.5rem;
+        --h2-font: 2.5rem;
+    }
+
+    form .submit-btn{
+        padding: 11px 21px;
+        font-size: 12px; 
+        width: 30%;      
+    }
+
+    
+}
+
+@media(max-width: 860px){
+    #menu-ico{
         display: block;
     }
-    .menu_principal{
+
+    :root{
+        --h1-font: 3.3rem;
+        --h2-font: 2.3rem;
+        --p-font: 1.2rem;
+    }
+
+    section{
+        padding: 100px 3% 170px;
+    }
+
+    .menulist{
         position: absolute;
         width: 100%;
         height: 100vh;
-        padding: 70px 50px;
+        padding-top: 150px;
+        text-align: center;
         top: 0;
         right: 0;
-        left: 0;
+        left: 100%;
         display: flex;
         flex-direction: column;
-        background: #000;
+        background: #0009;
         transition: all .6s ease-in-out;
     }
-    .menu_principal a{
+
+    .menulist a:hover{
+        color: var(--text-color);
+    }
+    .menulist a{
         display: block;
         padding: 0;
-        margin: 0 0 25px 0;
+        margin: 0px 0px 25px 0px;
         font-size: 1.7rem;
     }
 
-    .menu_principal.open{
-        left: 100%;
+    .menulist.open{
+        left: 0;
 
+    }
+    
+
+    form .submit-btn{
+        padding: 9px 19px;
+        font-size: 10px;       
+    }
+    .contact{
+        grid-template-columns: 1fr;
+        gap: 2rem;
+    }
+
+    form .submit-btn{
+        padding: 13px 27px;
+        width: 30%;
+        font-size:  13px;
     }
 }
 
 @media(max-width: 590px){
+    
     :root{
-        --h1-font: 1.8rem;
-        --h2-font: 1.5rem;
+        --h1-font: 2rem;
+        --h2-font: 2rem;
+        --p-font: 1.1rem;
+    }
+
+    section{
+        padding: 100px 3% 180px;
     }
     .about-img img{
         text-align: center;
         width: 100%;
-        height: 350px;
-        max-width: 290px;
+        height: 500px;
+        max-width: 350px;
+        border-radius: 20%;
+        object-fit: cover;
+        margin: 0 auto ;
+    }
+
+
+    form .submit-btn{
+        padding: 13px 27px;
+        width: 40%;
+        font-size:  13px;
+    }
+
+    .about-text{
+        text-align: center;
+    }
+
+    .h-btn {
+        margin-top: 20px;
+        display: grid; /* Activar grid en el contenedor */
+        grid-auto-flow: column; /* Coloca los elementos en una fila */
+        justify-content: center; /* Centra los elementos horizontalmente */
+        gap: 10px; /* Espacio entre los elementos */
+    }
+
+
+    .contact{
+        grid-template-columns: 1fr;
+        gap: 2rem;
+    }
+    
+    .about{
+        grid-template-columns: 1fr;
+        gap: 2rem;
+    }
+    
+}
+
+@media(max-width: 420px){
+
+    :root{
+        --h1-font: 2rem;
+        --h2-font: 1.5rem;
+        --p-font: 0.9rem;
+    }
+
+    .home{
+        background-position: right; 
+        background-attachment: fixed;
+    }
+
+    .home-text h4 {
+        font-size: 12px;
+    }
+
+    .social-icons a{
+        height: 25px;
+        width: 25px;
+    }
+    section{
+        padding: 100px 3% 180px;
+    }
+
+    .btn1{
+        padding: 12px 20px;
+        font-size: 14px;  
+        margin-right: 20px; 
+    }
+
+    .btn2{
+        padding: 12px 20px;
+        font-size: 14px;  
+        margin-right: 20px; 
+    }
+    .about-img img{
+        text-align: center;
+        width: 100%;
+        height: 500px;
+        max-width: 350px;
         border-radius: 20%;
         object-fit: cover;
         margin: 0 auto ;
@@ -605,6 +804,22 @@ form .submit-btn:hover{
         width: 40%;
         font-size:  13px;
     }
+
+    .about-text{
+        text-align: center;
+    }
+
+    .contact{
+        grid-template-columns: 1fr;
+        gap: 2rem;
+    }
+    
+    .about{
+        grid-template-columns: 1fr;
+        gap: 2rem;
+    }
+    
+
 }
 
 
